--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a-assets>
                 <a-asset-item
                     id="animated-asset"
-                    src="assets/asset.glb"
+                    src="assets/asset2.glb"
                 ></a-asset-item>
             </a-assets>
 
@@ -27,7 +27,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="0.08152338237572783 0.08152338237572783 0.08152338237572783"
+                    scale="1 1 1"
                     gps-entity-place="latitude: 28.4668663; longitude: -16.2722688;"
                 ></a-entity>
 
