--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     gps-entity-place="latitude: 28.4668663; longitude: -16.2722688;"
                 ></a-entity>
 
-            <a-camera gps-camera rotation-reader></a-camera>
+            <a-camera gps-camera rotation-reader simulateLatitude=28.4668663 simulateLongitude=-16.2722688></a-camera>
         </a-scene>
     </body>
 </html>
