--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="1 1 1"
-                    gps-entity-place="latitude: 28.4668663; longitude: -16.2722688;"
+                    gps-entity-place="latitude: 28.4668663+0.0000001; longitude: -16.2722688;"
+                    position="5 0 5"      
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader simulateLatitude="28.4668663" simulateLongitude="-16.2722688"></a-camera>
