--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                     gps-entity-place="latitude: 28.4668663+0.0000001; longitude: -16.2722688;"
                     position="5 0 5"      
                 ></a-entity>
+            
+            <a-box material="color: yellow" gps-new-entity-place="latitude: 28.4668663; longitude:-16.2722688"/>
 
             <a-camera gps-camera rotation-reader simulateLatitude="28.4668663" simulateLongitude="-16.2722688"></a-camera>
         </a-scene>
