--- a/index.html
+++ b/index.html
@@ -14,22 +14,20 @@
             renderer="logarithmicDepthBuffer: true;"
             embedded
             loading-screen="enabled: false;"
-
+            arjs="sourceType: webcam; debugUIEnabled: false;"
         >
             <a-assets>
                 <a-asset-item
-                    id="animated-asset"
+                    id="cabildo"
                     src="assets/asset2.glb"
                 ></a-asset-item>
             </a-assets>
 
                 <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
+                    gltf-model="#cabildo"
                     scale="1 1 1"
                     gps-entity-place="latitude: 28.4668663+0.0000001; longitude: -16.2722688+0.0000001;"
-                    position="5 0 5"      
+                    position="0 0 0"      
                 ></a-entity>
             
             <a-box material="color: yellow" gps-new-entity-place="latitude: 28.4668663+0.0000001; longitude:-16.2722688+0.0000001" position="0 3 0" scale="0.1 0.1 0.1"/>
