--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 <a-entity
                     gltf-model="#cabildo"
                     scale="1 1 1"
-                    gps-entity-place="latitude: 28.4668663+0.0000001; longitude: -16.2722688+0.0000001;"
-                    position="0 0 0"      
+                    gps-entity-place="latitude: 28.4668663; longitude: -16.2722688;" 
                 ></a-entity>
             
             
