--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     gltf-model="#cabildo"
                     scale="1 1 1"
                     gps-entity-place="latitude: 28.4668663; longitude: -16.2722688;" 
+                    location"0 1.6 0"
                 ></a-entity>
             
             
