--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a-entity
                     gltf-model="#cabildo"
                     scale="1 1 1"
-                    gps-entity-place="latitude: 28.4668663; longitude: -16.2722688;" 
+                    gps-entity-place="latitude: 28.4668663+0.0000001; longitude: -16.2722688+0.0000001;" 
                     location"0 1.6 0"
                 ></a-entity>
             
