--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 <a-entity
                     gltf-model="#cabildo"
                     scale="1 1 1"
-                    gps-entity-place="latitude: 28.4668663+0.0000001; longitude: -16.2722688+0.0000001;" 
+                    gps-entity-place="latitude: 28.466440+0.0000001; longitude: -16.272133+0.0000001;" 
                     location"0 1.6 0"
                 ></a-entity>
             
             
-            <a-camera gps-camera near="0.000001" rotation-reader simulateLatitude="28.4668663" simulateLongitude="-16.2722688"></a-camera>
+            <a-camera gps-camera near="0.000001" rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
