--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a-entity
                     gltf-model="#cabildo"
                     scale="100 100 100"
-                    gps-entity-place="latitude: 28.466440+0.0000001; longitude: -16.272133+0.0000001;" 
+                    gps-entity-place="latitude: 28.466664568855762; longitude: -16.272151588387075;" 
                     location"0 1.6 0"
                 ></a-entity>
             
