--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 ></a-entity>
             
             
-            <a-camera gps-new-camera near="0.000001" rotation-reader></a-camera>
+            <a-camera gps-new-camera near="0.000001" far="1000000" rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
