--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 <a-entity
                     gltf-model="#cabildo"
                     scale="10 10 10"
-                    gps-new-entity-place="latitude: 28.466664568855762; longitude: -16.272151588387075;" 
+                    gps-projected-entity-place="latitude: 28.466664568855762; longitude: -16.272151588387075;" 
                     location"0 1.6 0"
                 ></a-entity>
             
             
-            <a-camera gps-new-camera near="0.000001" far="1000000" rotation-reader></a-camera>
+            <a-camera gps-projected-camera near="0.000001" far="1000000" rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
