--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a-assets>
                 <a-asset-item
                     id="cabildo"
-                    src="assets/asset2.glb"
+                    src="https://www.webs.ull.es/users/fdoperez/public/asset10.glb"
                 ></a-asset-item>
             </a-assets>
 
