--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a-assets>
                 <a-asset-item
                     id="cabildo"
-                    src="https://www.webs.ull.es/users/fdoperez/public/asset11.glb"
+                    src="https://cdn.glitch.me/6bbb85a0-994a-4ddc-94f5-e8fe1430ef3d/asset11.glb?v=1675190599983"
                 ></a-asset-item>
             </a-assets>
 
